# ai-document-assistant

./: .gitignore  README.md  pyproject.toml  streamlit_app.py  test_streaming.py
.streamlit/: config.toml
app/: agent_simple.py  config.py  document_processor.py  graph_state.py  graph_workflows.py  llm.py  logger.py  main.py  middleware.py  pii_detector.py  rate_limiter.py  test_ui.html  tools.py  validators.py  vector_store.py
app/api/: agent_routes.py  chat_routes.py  graph_routes.py  guardrails_routes.py  loggers.py  rag_routes.py  rag_stream_routes.py  routes.py
pages/: 1_📄_Documents.py  2_🔧_Tools.py
